<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountScreen"
    android:background="#90cca5">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ConfirmPersonalInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ConfirmPersonalInfo"
                    android:textSize="20dp"
                    app:fontFamily="@font/marko_one" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textViewIdentifyRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Role"
                    app:fontFamily="@font/marko_one" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioPatient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Patient"
                        tools:layout_editor_absoluteX="43dp"
                        tools:layout_editor_absoluteY="117dp" />

                    <RadioButton
                        android:id="@+id/radioEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Employee"
                        tools:layout_editor_absoluteX="43dp"
                        tools:layout_editor_absoluteY="149dp" />
                </RadioGroup>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/usernameAndPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UserNameAndPassword"
                    app:fontFamily="@font/marko_one" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <EditText
                    android:id="@+id/usernameUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Username"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/passwordUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PasswordCreatAccount"
                    android:inputType="textPassword" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/AdditionalInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Additonal Information (If employee)"
                    app:fontFamily="@font/marko_one" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/AddressStr"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PhoneNumberStr"
                    android:inputType="number|phone" />

                <EditText
                    android:id="@+id/companyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/CompanyNameStr"
                    android:inputType="text" />

                <Switch
                    android:id="@+id/licensed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="5dp"
                    android:text="@string/LicensedStr" />

                <EditText
                    android:id="@+id/generalDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/GeneralDescStr"
                    android:inputType="textMultiLine|text"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:onClick="onClickRegister"
                    android:text="@string/SubmitButton"
                    android:textColor="#3a5e1c" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>