<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90cca5"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutWTLOGO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/WelcomeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/WelcomeTo"
                android:textColor="#3a5e1c"
                android:textSize="25dp"
                app:fontFamily="@font/marko_one" />

            <ImageView
                android:id="@+id/clinnectLogo"
                android:layout_width="155dp"
                android:layout_height="123dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clinnectlogo" />

            <Space
                android:id="@+id/space1"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/usernameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/PasswordMainLogIn"
                android:inputType="textPassword" />

            <Space
                android:id="@+id/sapce2"
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_gravity="center"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded"
                android:onClick="onClickLogin"
                android:text="@string/LogIn"
                android:textColor="#3a5e1c" />

            <Space
                android:id="@+id/space3"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <TextView
                android:id="@+id/DontHaveAnAccount"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DontHaveAnAccount"
                app:fontFamily="@font/marko_one" />

            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded"
                android:onClick="onClickSignUp"
                android:text="@string/SignUp"
                android:textColor="#3a5e1c" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>